SUBDIRS = skins

#LANGS := $(shell cat $(srcdir)/LINGUAS)

#install-exec-hook:
#	for lang in $(LANGS); do \
#		$(PYTHON) $(srcdir)/genmetaindex.py $$lang $(DESTDIR)$(datadir)/meta/skin_*.xml > $(DESTDIR)$(datadir)/meta/index-enigma2-skins_$$lang.xml; \
#	done

#uninstall-hook:
#	$(RM) $(DESTDIR)$(datadir)/meta/index-enigma2-skins_*.xml