AC_INIT([enigma2-skins],3.0.0,[enigma2-devel@lists.elitedvb.net])
AM_INIT_AUTOMAKE([foreign])

# Silent rules are available since 1.11, but older versions
# are still in use. So don't use them unconditionally.
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AM_PATH_PYTHON

AC_OUTPUT([
Makefile
skins/Makefile
skins/BASIC-HD/Makefile
skins/BASIC-HD/button/Makefile
skins/BASIC-HD/dvdplayer/Makefile
skins/BASIC-HD/graphepg/Makefile
skins/BASIC-HD/icon/Makefile
skins/BASIC-HD/listbox/Makefile
skins/BASIC-HD/menu/Makefile
skins/BASIC-HD/meta/Makefile
skins/BASIC-HD/window/Makefile
skins/BrushedAlu-HD/Makefile
skins/BrushedAlu-HD/menu/Makefile
skins/BrushedAlu-HD/icons/Makefile
skins/BrushedAlu-HD/buttons/Makefile
skins/BrushedAlu-HD/mmp3/Makefile
skins/BrushedAlu-HD/frame/Makefile
skins/BrushedAlu-HD/meta/Makefile
skins/DMConcinnity-HD/Makefile
skins/DMConcinnity-HD/buttons/Makefile
skins/DMConcinnity-HD/extensions/Makefile
skins/DMConcinnity-HD/fonts/Makefile
skins/DMConcinnity-HD/icons/Makefile
skins/DMConcinnity-HD/menu/Makefile
skins/DMConcinnity-HD/meta/Makefile
skins/DMConcinnity-HD/skin_default/Makefile
skins/DMConcinnity-HD/skin_default/buttons/Makefile
skins/DMConcinnity-HD/skin_default/icons/Makefile
skins/dmm-HD/Makefile
skins/dmm-HD/buttons/Makefile
skins/dmm-HD/extensions/Makefile
skins/dmm-HD/icons/Makefile
skins/dmm-HD/menu/Makefile
skins/dmm-HD/meta/Makefile
skins/dmm-HD/skin_default/Makefile
skins/dmm-HD/skin_default/icons/Makefile
skins/dmm-HD/skin_default/buttons/Makefile
skins/DreamMM-HD/Makefile
skins/DreamMM-HD/buttons/Makefile
skins/DreamMM-HD/icons/Makefile
skins/DreamMM-HD/menu/Makefile
skins/DreamMM-HD/meta/Makefile
skins/DreamMM-HD/selpic/Makefile
skins/DreamMM-HD/skin_default/Makefile
skins/dreamTV-HD/Makefile
skins/dreamTV-HD/menu/Makefile
skins/dreamTV-HD/icons/Makefile
skins/dreamTV-HD/buttons/Makefile
skins/dreamTV-HD/meta/Makefile
skins/dTV-HD/Makefile
skins/dTV-HD/menu/Makefile
skins/dTV-HD/icons/Makefile
skins/dTV-HD/buttons/Makefile
skins/dTV-HD/meta/Makefile
skins/dTV-HD-Reloaded/Makefile
skins/dTV-HD-Reloaded/buttons/Makefile
skins/dTV-HD-Reloaded/extensions/Makefile
skins/dTV-HD-Reloaded/icons/Makefile
skins/dTV-HD-Reloaded/menu/Makefile
skins/dTV-HD-Reloaded/meta/Makefile
skins/dTV-HD-Reloaded/skin_default/Makefile
skins/dTV-HD-Reloaded/skin_default/icons/Makefile
skins/elegance.HD/Makefile
skins/Elgato-HD/Makefile
skins/Elgato-HD/buttons/Makefile
skins/Elgato-HD/extensions/Makefile
skins/Elgato-HD/icons/Makefile
skins/Elgato-HD/meta/Makefile
skins/Elgato-HD/micon/Makefile
skins/Elgato-HD/selpic/Makefile
skins/Elgato-HD/skin_default/Makefile
skins/Elgato-HD/skin_default/icons/Makefile
skins/Kerni-HD1/Makefile
skins/Kerni-HD1/buttons/Makefile
skins/Kerni-HD1/icons/Makefile
skins/Kerni-HD1/menu/Makefile
skins/Kerni-HD1/meta/Makefile
skins/Kerni-HD1R2/Makefile
skins/Kerni-HD1R2/buttons/Makefile
skins/Kerni-HD1R2/extensions/Makefile
skins/Kerni-HD1R2/fonts/Makefile
skins/Kerni-HD1R2/icons/Makefile
skins/Kerni-HD1R2/menu/Makefile
skins/Kerni-HD1R2/meta/Makefile
skins/Kerni-HD1R2/mmp/Makefile
skins/Kerni-HD1R2/skin_default/Makefile
skins/Kerni-HD1R2/skin_default/buttons/Makefile
skins/Kerni-HD1R2/skin_default/icons/Makefile
skins/Nemesis.BlackBox/Makefile
skins/Nemesis.BlackBox/menu/Makefile
skins/Nemesis.BlackBox/meta/Makefile
skins/Nemesis.Blueline/Makefile
skins/Nemesis.Blueline/meta/Makefile
skins/Nemesis.Blueline.Extended/Makefile
skins/Nemesis.Blueline.Extended/meta/Makefile
skins/Nemesis.Blueline.Single/Makefile
skins/Nemesis.Blueline.Single/meta/Makefile
skins/Nemesis.ChromeLine/Makefile
skins/Nemesis.ChromeLine/menu/Makefile
skins/Nemesis.ChromeLine/meta/Makefile
skins/Nemesis.ChromeLine.Cobolt/Makefile
skins/Nemesis.ChromeLine.Cobolt/menu/Makefile
skins/Nemesis.ChromeLine.Cobolt/meta/Makefile
skins/Nemesis.Flatline/Makefile
skins/Nemesis.Flatline/meta/Makefile
skins/Nemesis.Flatline.Blue/Makefile
skins/Nemesis.Flatline.Blue/meta/Makefile
skins/Nemesis.GlassLine/Makefile
skins/Nemesis.GlassLine/menu/Makefile
skins/Nemesis.GlassLine/meta/Makefile
skins/Nemesis.Greenline/Makefile
skins/Nemesis.Greenline/meta/Makefile
skins/Nemesis.Greenline.Extended/Makefile
skins/Nemesis.Greenline.Extended/meta/Makefile
skins/Nemesis.Greenline.Single/Makefile
skins/Nemesis.Greenline.Single/meta/Makefile
skins/Nemesis.Greyline/Makefile
skins/Nemesis.Greyline/meta/Makefile
skins/Nemesis.Greyline.Extended/Makefile
skins/Nemesis.Greyline.Extended/meta/Makefile
skins/Nemesis.Greyline.Single/Makefile
skins/Nemesis.Greyline.Single/meta/Makefile
skins/Nemesis.ShadowLine/Makefile
skins/Nemesis.ShadowLine/meta/Makefile
skins/simple/Makefile
skins/simple/meta/Makefile
skins/SWAIN-HD/Makefile
skins/SWAIN-HD/mmp3/Makefile
skins/SWAIN-HD/meta/Makefile
skins/SWAIN/Makefile
skins/SWAIN/meta/Makefile
skins/UltraViolet/Makefile
skins/UltraViolet/buttons/Makefile
skins/UltraViolet/extensions/Makefile
skins/UltraViolet/icons/Makefile
skins/UltraViolet/menu/Makefile
skins/UltraViolet/meta/Makefile
skins/UltraViolet/selpic/Makefile
skins/UltraViolet/skin_default/Makefile
skins/UltraViolet/skin_default/icons/Makefile
skins/Vali.HD.atlantis/Makefile
skins/Vali.HD.atlantis/extensions/Makefile
skins/Vali.HD.atlantis/meta/Makefile
skins/Vali.HD.atlantis/images/Makefile
skins/Vali.HD.nano/Makefile
skins/Vali.HD.nano/extensions/Makefile
skins/Vali.HD.nano/meta/Makefile
skins/Vali.HD.nano/pics/Makefile
skins/Vali.HD.warp/Makefile
skins/Vali.HD.warp/extensions/Makefile
skins/Vali.HD.warp/meta/Makefile
skins/Vali.HD.warp/images/Makefile
skins/Vali-XD/Makefile
skins/Vali-XD/Atlantis/Makefile
skins/Vali-XD/Avalon/Makefile
skins/Vali-XD/BeyondDreams/Makefile
skins/Vali-XD/border/Makefile
skins/Vali-XD/buttons/Makefile
skins/Vali-XD/dvr/Makefile
skins/Vali-XD/fonts/Makefile
skins/Vali-XD/Glas/Makefile
skins/Vali-XD/infobar/Makefile
skins/Vali-XD/menu/Makefile
skins/Vali-XD/meta/Makefile
skins/Vali-XD/MetalPad/Makefile
skins/Vali-XD/ProfiLine/Makefile
skins/Vali-XD/Validator/Makefile
skins/Vali-XD/Vision/Makefile
skins/Vali-XD/window/Makefile
skins/YADS-HD/Makefile
skins/YADS-HD/buttons/Makefile
skins/YADS-HD/extensions/Makefile
skins/YADS-HD/icons/Makefile
skins/YADS-HD/meta/Makefile
skins/YADS-HD/selpic/Makefile
skins/YADS-HD/skin_default/Makefile
skins/YADS-HD/skin_default/icons/Makefile
])
