AC_INIT([enigma2-skins],4.3.0,[https://github.com/opendreambox/enigma2-skins/issues])
AM_INIT_AUTOMAKE([foreign])

AM_PATH_PYTHON

AC_OUTPUT([
Makefile
skins/Makefile
skins/BASIC-HD/Makefile
skins/BASIC-HD/button/Makefile
skins/BASIC-HD/dvdplayer/Makefile
skins/BASIC-HD/graphepg/Makefile
skins/BASIC-HD/icon/Makefile
skins/BASIC-HD/listbox/Makefile
skins/BASIC-HD/menu/Makefile
skins/BASIC-HD/meta/Makefile
skins/BASIC-HD/window/Makefile
skins/BrushedAlu-HD/Makefile
skins/BrushedAlu-HD/menu/Makefile
skins/BrushedAlu-HD/icons/Makefile
skins/BrushedAlu-HD/buttons/Makefile
skins/BrushedAlu-HD/mmp3/Makefile
skins/BrushedAlu-HD/frame/Makefile
skins/BrushedAlu-HD/meta/Makefile
skins/DMConcinnity-HD/Makefile
skins/DMConcinnity-HD/buttons/Makefile
skins/DMConcinnity-HD/extensions/Makefile
skins/DMConcinnity-HD/fonts/Makefile
skins/DMConcinnity-HD/icons/Makefile
skins/DMConcinnity-HD/menu/Makefile
skins/DMConcinnity-HD/meta/Makefile
skins/DMConcinnity-HD/skin_default/Makefile
skins/DMConcinnity-HD/skin_default/buttons/Makefile
skins/DMConcinnity-HD/skin_default/icons/Makefile
skins/dmm-HD/Makefile
skins/dmm-HD/buttons/Makefile
skins/dmm-HD/extensions/Makefile
skins/dmm-HD/icons/Makefile
skins/dmm-HD/menu/Makefile
skins/dmm-HD/meta/Makefile
skins/dmm-HD/skin_default/Makefile
skins/dmm-HD/skin_default/icons/Makefile
skins/dmm-HD/skin_default/buttons/Makefile
skins/DreamMM-HD/Makefile
skins/DreamMM-HD/buttons/Makefile
skins/DreamMM-HD/icons/Makefile
skins/DreamMM-HD/menu/Makefile
skins/DreamMM-HD/meta/Makefile
skins/DreamMM-HD/selpic/Makefile
skins/DreamMM-HD/skin_default/Makefile
skins/dreamTV-HD/Makefile
skins/dreamTV-HD/menu/Makefile
skins/dreamTV-HD/icons/Makefile
skins/dreamTV-HD/buttons/Makefile
skins/dreamTV-HD/meta/Makefile
skins/Dreamy-FHD/Makefile
skins/Dreamy-FHD/box/Makefile
skins/Dreamy-FHD/buttons/Makefile
skins/Dreamy-FHD/extensions/Makefile
skins/Dreamy-FHD/fonts/Makefile
skins/Dreamy-FHD/icons/Makefile
skins/Dreamy-FHD/menu/Makefile
skins/Dreamy-FHD/menu/panels/Makefile
skins/Dreamy-FHD/menu/slider/Makefile
skins/Dreamy-FHD/meta/Makefile
skins/Dreamy-FHD/skin_default/Makefile
skins/Dreamy-FHD/skin_default/buttons/Makefile
skins/Dreamy-FHD/skin_default/extensions/Makefile
skins/Dreamy-FHD/skin_default/icons/Makefile
skins/dTV-HD/Makefile
skins/dTV-HD/menu/Makefile
skins/dTV-HD/icons/Makefile
skins/dTV-HD/buttons/Makefile
skins/dTV-HD/meta/Makefile
skins/dTV-HD-Reloaded/Makefile
skins/dTV-HD-Reloaded/buttons/Makefile
skins/dTV-HD-Reloaded/extensions/Makefile
skins/dTV-HD-Reloaded/icons/Makefile
skins/dTV-HD-Reloaded/menu/Makefile
skins/dTV-HD-Reloaded/meta/Makefile
skins/dTV-HD-Reloaded/skin_default/Makefile
skins/dTV-HD-Reloaded/skin_default/icons/Makefile
skins/elegance.HD/skin_default/Makefile
skins/elegance.HD/skin_default/icons/Makefile
skins/elegance.HD/skin_default/buttons/Makefile
skins/elegance.HD/Makefile
skins/elegance.HD/meta/Makefile
skins/Elgato-HD/Makefile
skins/Elgato-HD/buttons/Makefile
skins/Elgato-HD/extensions/Makefile
skins/Elgato-HD/icons/Makefile
skins/Elgato-HD/meta/Makefile
skins/Elgato-HD/micon/Makefile
skins/Elgato-HD/selpic/Makefile
skins/Elgato-HD/skin_default/Makefile
skins/Elgato-HD/skin_default/icons/Makefile
skins/hdsuisse.one4all.fhd/Makefile
skins/hdsuisse.one4all.fhd/bg/Makefile
skins/hdsuisse.one4all.fhd/buttons/Makefile
skins/hdsuisse.one4all.fhd/emc/Makefile
skins/hdsuisse.one4all.fhd/epgcenter/Makefile
skins/hdsuisse.one4all.fhd/extensions/Makefile
skins/hdsuisse.one4all.fhd/fonts/Makefile
skins/hdsuisse.one4all.fhd/gfx/Makefile
skins/hdsuisse.one4all.fhd/icons/Makefile
skins/hdsuisse.one4all.fhd/icons/audio/Makefile
skins/hdsuisse.one4all.fhd/menu/Makefile
skins/hdsuisse.one4all.fhd/menu/slider/Makefile
skins/hdsuisse.one4all.fhd/meta/Makefile
skins/hdsuisse.one4all.fhd/preview/Makefile
skins/hdsuisse.one4all.fhd/preview/ChannelSelection/Makefile
skins/hdsuisse.one4all.fhd/preview/EPGSelection/Makefile
skins/hdsuisse.one4all.fhd/preview/GraphMultiEPG/Makefile
skins/hdsuisse.one4all.fhd/preview/InfoBar/Makefile
skins/hdsuisse.one4all.fhd/preview/InfoBarSummary3/Makefile
skins/hdsuisse.one4all.fhd/preview/MessageBox/Makefile
skins/hdsuisse.one4all.fhd/preview/MovieSelection/Makefile
skins/hdsuisse.one4all.fhd/preview/Mute/Makefile
skins/hdsuisse.one4all.fhd/preview/PluginBrowser/Makefile
skins/hdsuisse.one4all.fhd/preview/SecondInfoBar/Makefile
skins/hdsuisse.one4all.fhd/preview/StandbySummary3/Makefile
skins/hdsuisse.one4all.fhd/preview/Volume/Makefile
skins/hdsuisse.one4all.fhd/skin_default/Makefile
skins/hdsuisse.one4all.fhd/skin_default/buttons/Makefile
skins/hdsuisse.one4all.fhd/skin_default/icons/Makefile
skins/holo-black/Makefile
skins/holo-black/components/Makefile
skins/holo-black/extensions/Makefile
skins/holo-black/fonts/Makefile
skins/holo-black/icons/Makefile
skins/holo-black/images/Makefile
skins/holo-black/images/buttons/Makefile
skins/holo-black/menu/Makefile
skins/holo-black/meta/Makefile
skins/holo-black/skin_default/Makefile
skins/holo-black/skin_default/buttons/Makefile
skins/holo-black/skin_default/icons/Makefile
skins/holo-dark/Makefile
skins/holo-dark/components/Makefile
skins/holo-dark/extensions/Makefile
skins/holo-dark/fonts/Makefile
skins/holo-dark/icons/Makefile
skins/holo-dark/images/Makefile
skins/holo-dark/images/buttons/Makefile
skins/holo-dark/menu/Makefile
skins/holo-dark/meta/Makefile
skins/holo-dark/skin_default/Makefile
skins/holo-dark/skin_default/buttons/Makefile
skins/holo-dark/skin_default/icons/Makefile
skins/holo-light/Makefile
skins/holo-light/components/Makefile
skins/holo-light/extensions/Makefile
skins/holo-light/fonts/Makefile
skins/holo-light/icons/Makefile
skins/holo-light/images/Makefile
skins/holo-light/images/buttons/Makefile
skins/holo-light/menu/Makefile
skins/holo-light/meta/Makefile
skins/holo-light/skin_default/Makefile
skins/holo-light/skin_default/buttons/Makefile
skins/holo-light/skin_default/icons/Makefile
skins/holoFHD-black/Makefile
skins/holoFHD-black/components/Makefile
skins/holoFHD-black/extensions/Makefile
skins/holoFHD-black/fonts/Makefile
skins/holoFHD-black/icons/Makefile
skins/holoFHD-black/images/Makefile
skins/holoFHD-black/images/buttons/Makefile
skins/holoFHD-black/menu/Makefile
skins/holoFHD-black/meta/Makefile
skins/holoFHD-black/skin_default/Makefile
skins/holoFHD-black/skin_default/buttons/Makefile
skins/holoFHD-black/skin_default/icons/Makefile
skins/holoFHD-dark/Makefile
skins/holoFHD-dark/components/Makefile
skins/holoFHD-dark/extensions/Makefile
skins/holoFHD-dark/fonts/Makefile
skins/holoFHD-dark/icons/Makefile
skins/holoFHD-dark/images/Makefile
skins/holoFHD-dark/images/buttons/Makefile
skins/holoFHD-dark/menu/Makefile
skins/holoFHD-dark/meta/Makefile
skins/holoFHD-dark/skin_default/Makefile
skins/holoFHD-dark/skin_default/buttons/Makefile
skins/holoFHD-dark/skin_default/icons/Makefile
skins/holoFHD-light/Makefile
skins/holoFHD-light/components/Makefile
skins/holoFHD-light/extensions/Makefile
skins/holoFHD-light/fonts/Makefile
skins/holoFHD-light/icons/Makefile
skins/holoFHD-light/images/Makefile
skins/holoFHD-light/images/buttons/Makefile
skins/holoFHD-light/menu/Makefile
skins/holoFHD-light/meta/Makefile
skins/holoFHD-light/skin_default/Makefile
skins/holoFHD-light/skin_default/buttons/Makefile
skins/holoFHD-light/skin_default/icons/Makefile
skins/Kerni-HD1/Makefile
skins/Kerni-HD1/buttons/Makefile
skins/Kerni-HD1/icons/Makefile
skins/Kerni-HD1/menu/Makefile
skins/Kerni-HD1/meta/Makefile
skins/Kerni-HD1R2/Makefile
skins/Kerni-HD1R2/buttons/Makefile
skins/Kerni-HD1R2/extensions/Makefile
skins/Kerni-HD1R2/fonts/Makefile
skins/Kerni-HD1R2/icons/Makefile
skins/Kerni-HD1R2/menu/Makefile
skins/Kerni-HD1R2/meta/Makefile
skins/Kerni-HD1R2/mmp/Makefile
skins/Kerni-HD1R2/skin_default/Makefile
skins/Kerni-HD1R2/skin_default/buttons/Makefile
skins/Kerni-HD1R2/skin_default/icons/Makefile
skins/SWAIN-HD/Makefile
skins/SWAIN-HD/mmp3/Makefile
skins/SWAIN-HD/meta/Makefile
skins/UltraViolet/Makefile
skins/UltraViolet/buttons/Makefile
skins/UltraViolet/extensions/Makefile
skins/UltraViolet/icons/Makefile
skins/UltraViolet/menu/Makefile
skins/UltraViolet/meta/Makefile
skins/UltraViolet/selpic/Makefile
skins/UltraViolet/skin_default/Makefile
skins/UltraViolet/skin_default/icons/Makefile
skins/Vali.HD.atlantis/Makefile
skins/Vali.HD.atlantis/extensions/Makefile
skins/Vali.HD.atlantis/meta/Makefile
skins/Vali.HD.atlantis/images/Makefile
skins/Vali.HD.nano/Makefile
skins/Vali.HD.nano/extensions/Makefile
skins/Vali.HD.nano/meta/Makefile
skins/Vali.HD.nano/pics/Makefile
skins/Vali.HD.warp/Makefile
skins/Vali.HD.warp/extensions/Makefile
skins/Vali.HD.warp/meta/Makefile
skins/Vali.HD.warp/images/Makefile
skins/YADS-HD/Makefile
skins/YADS-HD/buttons/Makefile
skins/YADS-HD/extensions/Makefile
skins/YADS-HD/icons/Makefile
skins/YADS-HD/meta/Makefile
skins/YADS-HD/selpic/Makefile
skins/YADS-HD/skin_default/Makefile
skins/YADS-HD/skin_default/icons/Makefile
])
