SUBDIRS = \
	Nemesis.Blueline Nemesis.Blueline.Extended Nemesis.Blueline.Single \
	Nemesis.Flatline Nemesis.Flatline.Blue Nemesis.Greenline \
	Nemesis.Greenline.Extended Nemesis.Greenline.Single Nemesis.Greyline \
	Nemesis.Greyline.Extended Nemesis.Greyline.Single Nemesis.BlackBox \
	Nemesis.ChromeLine Nemesis.ChromeLine.Cobolt Nemesis.GlassLine \
	Nemesis.ShadowLine Kerni-HD1 dreamTV-HD dTV-HD dmm-HD
