SUBDIRS = \
	Nemesis.Blueline Nemesis.Blueline.Extended Nemesis.Blueline.Single \
	Nemesis.Flatline Nemesis.Flatline.Blue Nemesis.Greenline \
	Nemesis.Greenline.Extended Nemesis.Greenline.Single Nemesis.Greyline \
	Nemesis.Greyline.Extended Nemesis.Greyline.Single Nemesis.BlackBox \
	Nemesis.ChromeLine Nemesis.ChromeLine.Cobolt Nemesis.GlassLine \
	Nemesis.ShadowLine dreamTV-HD dTV-HD BrushedAlu-HD SWAIN-HD \
	SWAIN simple BASIC-HD UltraViolet DreamMM-HD YADS-HD Elgato-HD \
	dTV-HD-Reloaded Kerni-HD1R2 dmm-HD Vali-XD Kerni-HD1 Vali.HD.nano
