SUBDIRS = \
	dreamTV-HD dTV-HD BrushedAlu-HD SWAIN-HD \
	BASIC-HD UltraViolet DreamMM-HD YADS-HD Elgato-HD \
	dTV-HD-Reloaded Kerni-HD1R2 dmm-HD Kerni-HD1 Vali.HD.nano \
	Vali.HD.warp Vali.HD.atlantis DMConcinnity-HD elegance.HD \
	holo-black holo-dark holo-light holoFHD-black holoFHD-dark \
	holoFHD-light Dreamy-FHD hdsuisse.one4all.fhd
